--- a/index.css
+++ b/index.css
@@ -15,13 +15,13 @@ header {
 	background-size: cover;
 	background-position: 20% 20%;
 	min-height:100%;
-	padding-top:300px;
+	padding: 600px 400px 0 0;
 }
 .header-position {
 	padding: 0 0 0 0;
-	margin: 0 400px 0 0;
+	margin: 0 400px 0 0px;
 }
-.col-xs-8 {
+.col-xs-2 {
 	padding-right: 350px;
 }
 header h3 {
@@ -38,6 +38,7 @@ header h3.name {
 	font-style:italic;
 	color:#E8B6B6;
 	background-color: #fcf4e8;
+	text-align: right;
 }
 #intro {
 	background-image: url("https://i1.wp.com/assets.papodehomem.com.br/2016/05/04/14/12/57/ae46c0c2-fa7c-4f0f-bf8c-57344be5a25a/heroina.jpg");
@@ -65,9 +66,9 @@ header h3.name {
 	background-attachment:fixed;
 	background-repeat: no-repeat;
 	background-position: 50% 50%;
-	background-size:cover;
+	background-size: cover;
 	min-height:100%;
-	padding:280px 0;
+	padding: 280px 0;
 }
 #legacy h1 {
 	text-align:center;
