--- a/styles/site.css
+++ b/styles/site.css
@@ -40,6 +40,9 @@ header h3.name {
 	background-color: #fcf4e8;
 	text-align: right;
 }
+
+/*DAQUI PRA CIMA TÁ OK*/
+
 #intro {
 	padding:60px 0;
 	margin-bottom:80px;
